[package]
name = "img-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_yaml = "0.9.34"
sha256 = "1.5.0"
threadpool = "1.8.1"
urlencoding = "2.1.3"
walkdir = "2.5.0"
