[package]
name = "img-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
indicatif = "0.17.11"
nom-exif = "2.5.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_yaml = "0.9.34"
sha256 = "1.5.0"
threadpool = "1.8.1"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
